songbird/pages/game/game.css
/* ... */
.questions__list {
  background-color: #168866;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  color: white;
  font-size: 16px;
  line-height: 20px;
  font-style: normal;
  font-weight: 400;
}

.questions__item {
  background-color: #168866;
  padding: 8px 15px;
  flex: 1 1 auto;
  text-align: center;
}
.questions__item_active {
  background-color: #41c09a;
}

.current {
  display: flex;
  padding: 15px 50px 15px 15px;
  background-color: #323435;
  border-radius: 5px;
  margin-bottom: 20px;
}
@media (max-width: 699px) {
  .current {
    flex-direction: column;
    padding: 15px;
  }
}

.current__image {
  margin-right: 40px;
  border-radius: 10px;
  overflow: hidden;
  width: 220px;
  height: 170px;
}
@media (max-width: 699px) {
  .current__image {
    text-align: center;
    margin-right: 0;
    margin-bottom: 20px;
  }
}

.current__img {
  width: 100%;
  height: 100%;
}

.current__description {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.current__title {
  font-size: 30px;
  line-height: 34px;
  font-style: normal;
  font-weight: 400;
  color: white;
  margin-top: 10px;
  padding-bottom: 15px;
}
@media (max-width: 699px) {
  .current__title {
    margin-top: 0;
    padding-bottom: 10px;
    text-align: center;
  }
}

.line {
  border-bottom: 1px solid rgb(95, 106, 109);
}

.current__audio {
  display: flex;
  flex-direction: column;
}

.controls {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 60px;
  border-top: 0;
  margin-bottom: 5px;
}

.play-container {
  width: 35px;
  height: 35px;
  border: 2px solid #41c09a;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  margin-right: 20px;
  cursor: pointer;
  transition: 0.3s;
}

.play {
  display: block;
  width: 25px;
  height: 20px;
  background-size: contain;
  background-position: center center;
  background-repeat: no-repeat;
  margin-left: 4px;
  background-image: url(../../assets/b17b295c069a581c0399.png);
  align-self: center;
}
.play:hover {
  transform: scale(1.2);
}

.volume {
  display: block;
  width: 35px;
  height: 30px;
  background-size: contain;
  background-position: center center;
  background-repeat: no-repeat;
  margin-right: 25px;
  cursor: pointer;
  background-image: url(../../assets/871a39a57d01f47ffb1f.png);
  align-self: center;
}
.volume:hover {
  transform: scale(1.1);
}

.pause {
  background-image: url(../../assets/db8d6459686cb33ebb10.png);
  margin-left: 0;
}

.mute {
  background-image: url(../../assets/efb3e2f5ad8d1298488e.png);
}

.progress-container {
  display: flex;
  flex-direction: column;
  align-content: flex-end;
  margin-top: 15px;
  width: calc(100% - 60px);
}

.progress {
  padding: 0;
  margin: 0;
  margin-right: 5px;
  margin-bottom: 10px;
  height: 4px;
  outline: none;
  transition: background 450ms ease-in;
  -webkit-appearance: none;
  background: linear-gradient(to right, #3baf8e 0%, #0e6467 0%, #64696b 0%, #64696b 100%);
}

.progress::-webkit-slider-thumb {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  -webkit-appearance: none;
  cursor: ew-resize;
  background: #41c09a;
}

.volume-container {
  display: flex;
  align-items: center;
}

.volume-progress {
  padding: 0;
  margin: 0;
  height: 4px;
  outline: none;
  transition: background 450ms ease-in;
  -webkit-appearance: none;
  background: linear-gradient(to right, #3baf8e 0%, #0e6467 0%, #64696b 0%, #64696b 100%);
}

.volume-progress::-webkit-slider-thumb {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  -webkit-appearance: none;
  cursor: ew-resize;
  background: #41c09a;
}

.time {
  font-size: 12px;
  line-height: 14px;
  font-style: normal;
  font-weight: 400;
  display: flex;
  justify-content: space-between;
  margin: 0 5px 0 0;
}

.wrapper-add {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}
@media (max-width: 699px) {
  .wrapper-add {
    flex-direction: column;
  }
}

.answers {
  border-radius: 5px;
  width: calc(50% - 15px);
  background-color: #323435;
  border: 1px solid #596064;
  margin-right: 15px;
  display: flex;
  flex-direction: column;
}
@media (max-width: 1249px) {
  .answers {
    width: calc(30% - 15px);
  }
}
@media (max-width: 699px) {
  .answers {
    width: 100%;
    margin-right: 0;
    margin-bottom: 20px;
  }
}

.answers__item {
  font-size: 16px;
  line-height: 20px;
  font-style: normal;
  font-weight: 400;
  padding: 15px 50px;
  flex: 1 1 auto;
  border-bottom: 1px solid #596064;
  display: block;
  position: relative;
  user-select: none;
  cursor: pointer;
}
.answers__item:last-child {
  border: none;
}
.answers__item:hover {
  background-color: #596064;
}

/* Hide the browser's default checkbox */
.answers__item input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 20px;
  left: 20px;
  height: 10px;
  width: 10px;
  background-color: #596064;
  border-radius: 50%;
}

.answers__item input:checked ~ .checkmark {
  background-color: #e62618;
}

.answers__item_correct input:checked ~ .checkmark {
  background-color: #2bb487;
}

.description {
  border-radius: 5px;
  width: calc(50% - 15px);
  background-color: #323435;
  border: 1px solid #596064;
  margin-left: 15px;
}
@media (max-width: 1249px) {
  .description {
    width: calc(70% - 15px);
  }
}
@media (max-width: 699px) {
  .description {
    width: 100%;
    margin-left: 0;
  }
}

.description__text {
  padding-left: 20px;
  padding-top: 20px;
}
@media (max-width: 699px) {
  .description__text {
    padding-bottom: 20px;
  }
}

.description__card {
  padding: 20px;
  display: flex;
  flex-direction: column;
}

.decription__main-content {
  display: flex;
  margin-bottom: 15px;
}
@media (max-width: 699px) {
  .decription__main-content {
    flex-direction: column;
    align-content: center;
  }
}
/* ... */

